Outputs/out1.txt
laplace_MPI.c: En la función ‘laplace_step’:
laplace_MPI.c:17:12: error: ‘k’ no se declaró aquí (primer uso en esta función)
       for (k=1; k < m-1; k++)
            ^
laplace_MPI.c:17:12: nota: cada identificador sin declarar se reporta sólo una vez para cada función en el que aparece
laplace_MPI.c:25:18: error: ‘size’ no se declaró aquí (primer uso en esta función); ¿quiso decir ‘sinl’?
     if (rank != (size-1))
                  ^~~~
                  sinl
laplace_MPI.c:27:11: error: ‘l’ no se declaró aquí (primer uso en esta función)
       for(l=1; l < m-1; l++)
           ^
laplace_MPI.c:28:65: error: expected ‘;’ before ‘}’ token
         out[l] = stencil(in[l+1], in[l-1], in[+l], posterior[l])
                                                                 ^
                                                                 ;
     }
     ~                                                            
laplace_MPI.c: En la función ‘main’:
laplace_MPI.c:134:45: error: expected ‘;’ before ‘}’ token
         printf("Execution time: %fs", t2-t1)
                                             ^
                                             ;
     }
     ~                                        
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       clus05
Executable: executable
--------------------------------------------------------------------------
4 total processes failed to start
rm: no se puede borrar 'executable': No existe el fichero o el directorio
